<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity">

	<com.google.android.material.appbar.AppBarLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:theme="@style/AppTheme.AppBarOverlay">

		<androidx.appcompat.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				app:popupTheme="@style/AppTheme.PopupOverlay">

			<Button
					android:id="@+id/main_donateButton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="end"
					android:layout_marginEnd="10dp"
					android:text="@string/ui_donate" />
		</androidx.appcompat.widget.Toolbar>

	</com.google.android.material.appbar.AppBarLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="15sp"
			android:orientation="vertical"
			android:paddingTop="?attr/actionBarSize">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="4sp"
					android:text="@string/ui_modeMain"
					android:textSize="20sp" />

			<RadioGroup
					android:id="@+id/main_radioGroup"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="10sp"
					android:layout_marginBottom="10sp">

				<RadioButton
						android:id="@+id/main_radio1"
						android:layout_width="wrap_content"
						android:layout_height="48sp"
						android:text="@string/ui_modeFirst"
						android:textSize="18sp" />

				<RadioButton
						android:id="@+id/main_radio2"
						android:layout_width="wrap_content"
						android:layout_height="48sp"
						android:text="@string/ui_modeSecond"
						android:textSize="18sp" />

				<RadioButton
						android:id="@+id/main_radio3"
						android:layout_width="wrap_content"
						android:layout_height="48sp"
						android:text="@string/ui_modeThird"
						android:textSize="18sp" />

				<RadioButton
						android:id="@+id/main_radio4"
						android:layout_width="wrap_content"
						android:layout_height="48sp"
						android:text="@string/ui_modeFourth"
						android:textSize="18sp" />
			</RadioGroup>
		</LinearLayout>

		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/ui_timerMain"
					android:textSize="18sp" />

			<Spinner
					android:id="@+id/main_timeSpinner"
					android:layout_width="150sp"
					android:layout_height="48sp"
					android:layout_marginStart="30sp"
					android:textSize="24sp" />
		</LinearLayout>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10sp">

			<Button
					android:id="@+id/main_startButton"
					android:layout_width="128sp"
					android:layout_height="64sp"
					android:text="@string/ui_start"
					android:textSize="18sp" />

			<Button
					android:id="@+id/main_checkButton"
					android:layout_width="128sp"
					android:layout_height="64sp"
					android:layout_marginStart="30sp"
					android:text="@string/ui_check"
					android:textSize="18sp" />
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
