<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		tools:showIn="@layout/activity_main"
		android:fitsSystemWindows="true"
		android:background="#404040"
		tools:context="soheilkd.BurninWiper.MainActivity">
	<RelativeLayout android:layout_width="match_parent"
					android:layout_height="match_parent"
					tools:ignore="UselessParent">
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_margin="15sp">
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="4sp"
						android:textSize="20sp"
						android:text="@string/ui_modeMain"/>
				<RadioGroup
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="10sp"
						android:layout_marginLeft="10sp"
						android:layout_marginBottom="10sp"
						android:id="@+id/ModeRadioGroup">
					<RadioButton
							android:layout_height="48sp"
							android:layout_width="wrap_content"
							android:id="@+id/modeRadioButton1"
							android:textSize="18sp"
							android:text="@string/ui_modeFirst" />
					<RadioButton
							android:layout_height="48sp"
							android:layout_width="wrap_content"
							android:id="@+id/modeRadioButton2"
							android:textSize="18sp"
							android:text="@string/ui_modeSecond" />
					<RadioButton
							android:layout_height="48sp"
							android:layout_width="wrap_content"
							android:id="@+id/modeRadioButton3"
							android:textSize="18sp"
							android:text="@string/ui_modeThird" />
				</RadioGroup>
			</LinearLayout>
			<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="18sp"
						android:text="@string/ui_timerMain" />
				<Spinner
						android:layout_width="150sp"
						android:layout_height="48sp"
						android:textSize="24sp"
						android:layout_marginStart="30sp"
						android:layout_marginLeft="30sp"
						android:id="@+id/TimerSpinner"/>
			</LinearLayout>
			<LinearLayout
					android:layout_marginTop="10sp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				<Button
						android:layout_width="128sp"
						android:layout_height="64sp"
						android:text="@string/ui_start"
						android:textSize="18sp"
						android:id="@+id/StartButton"/>
				<Button
						android:layout_width="128sp"
						android:layout_height="64sp"
						android:textSize="18sp"
						android:text="@string/ui_check"
						android:layout_marginLeft="30sp"
						android:layout_marginStart="30sp"
						android:id="@+id/CheckButton"/>
			</LinearLayout>
		</LinearLayout>
		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:id="@+id/DonateButton"
				android:text="Donate"/>
	</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
